sharper uptake plot

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -428,7 +428,7 @@ planning to make it public in the near future, hopefully by the end of 2019.
 
 \begin{figure*}[ht!]
   \centering
-  \includegraphics[width=\textwidth]{uptake.png}
+  \includegraphics[width=\textwidth]{mfa-enrollment.png}
   \caption{User enrollment in MFA in 2018, from initial rollout to mandatory requirement.}
   \Description{User enrollment in MFA in 2018, from initial rollout to mandatory requirement.}
   \label{uptake}
