fixed awkward wording

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -47,8 +47,8 @@
 \begin{abstract}
 
 NERSC is not the first organization to implement multi-factor authentication
-(MFA) for its users, and we had seen multiple talks by other supercomputing
-facilities who had deployed MFA.  But as we planned and deployed our MFA
+(MFA) for its users. We had seen multiple talks by other supercomputing
+facilities who had deployed MFA, but as we planned and deployed our MFA
 implementation, we found that nobody had talked about the more interesting and
 difficult challenges, which were largely social rather than technical. Our MFA
 deployment was a success, but, more importantly, much of what we learned could
@@ -263,7 +263,7 @@ remove all tokens from their account, then log in (without MFA) to NIM to set up
 a new token.
 
 In addition, NERSC wanted to make it possible for users whose tokens were not
-immediately available to not be stuck and unable to work. For this purpose,
+immediately available to be able to work. For this purpose,
 NERSC developed the capability within NIM for users to provision back-up
 one-time passwords that a user could print and store in a safe place (e.g.,
 wallet, locked drawer) to be used in the event of an emergency.
