add suggestion to abstract

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -55,7 +55,8 @@ deployment was a success, but, more importantly, much of what we learned could
 apply to any infrastructure change. Additionally, we developed the sshproxy
 service, a key piece of infrastructure technology that lessens user and staff
 burden and has made our MFA implementation more amenable to scientific
-workflows.
+workflows. We found great value in using robust open-source components
+where we could and developing tailored solutions where necessary.
 
 \end{abstract}
 
